--- a/special-pages/pages/settings/app/components/App.module.css
+++ b/special-pages/pages/settings/app/components/App.module.css
@@ -117,3 +117,8 @@ body {
 .paddedErrorRecovery {
     margin-top: 1rem;
 }
+
+::highlight(search-results) {
+    background-color: yellow;
+    color: black;
+}
