--- a/special-pages/pages/history/app/components/Sidebar.module.css
+++ b/special-pages/pages/history/app/components/Sidebar.module.css
@@ -1,11 +1,15 @@
 .stack {
     display: flex;
     flex-direction: column;
-    > * {
+    height: 100%;
+
+    >* {
         min-width: 0
     }
+
     gap: 24px;
 }
+
 .pageTitle {
     color: var(--history-text-normal);
     font-size: var(--title-font-size);
@@ -13,18 +17,25 @@
     line-height: 24px;
     padding: 10px 6px 10px 10px;
 }
-.nav {}
+
+.nav {
+    padding-right: 0;
+}
+
 .item {
     position: relative;
     border-radius: 8px;
     display: flex;
 
-    &:hover, &:focus-visible {
+    &:hover,
+    &:focus-visible {
         background: var(--color-black-at-6);
     }
 
-    [data-theme="dark"] &  {
-        &:hover, &:focus-visible {
+    [data-theme="dark"] & {
+
+        &:hover,
+        &:focus-visible {
             background: var(--color-white-at-6);
         }
     }
@@ -37,12 +48,14 @@
 
 .active {
     background: var(--color-black-at-12);
+
     &:hover {
         background: var(--color-black-at-18);
     }
 
-    [data-theme="dark"] &  {
+    [data-theme="dark"] & {
         background: var(--color-white-at-9);
+
         &:hover {
             background: var(--color-white-at-12);
         }
@@ -88,7 +101,9 @@
     color: var(--history-text-normal);
 
     &:not([aria-disabled="true"]) {
-        &:hover, &:focus-visible {
+
+        &:hover,
+        &:focus-visible {
             background: var(--color-black-at-9);
             opacity: 1;
         }
@@ -102,6 +117,7 @@
         &:hover {
             background: var(--color-white-at-9);
         }
+
         &:active {
             background: var(--color-white-at-12);
         }
@@ -111,7 +127,7 @@
         opacity: 1;
     }
 
-    .link:focus-visible + & {
+    .link:focus-visible+& {
         opacity: 1;
     }
 
