--- a/special-pages/pages/settings/app/components/Sidebar.module.css
+++ b/special-pages/pages/settings/app/components/Sidebar.module.css
@@ -35,9 +35,9 @@
 }
 
 .active {
-    background: var(--color-black-at-12);
+    background: var(--color-black-at-9);
     &:hover {
-        background: var(--color-black-at-18);
+        background: var(--color-black-at-12);
     }
 
     [data-theme="dark"] &  {
@@ -55,7 +55,7 @@
 }
 
 .group {
-    border-bottom: 1px solid var(--color-black-at-12);
+    border-bottom: 1px solid var(--color-black-at-9);
     padding-bottom: 10px;
 }
 
@@ -76,7 +76,7 @@
     display: flex;
     align-items: center;
     border-radius: 8px;
-    padding-left: 16px;
+    padding-inline: 16px;
     text-decoration: none;
     gap: 6px;
     border: 0;
@@ -88,57 +88,29 @@
     text-transform: capitalize;
 }
 
-.delete {
-    height: 40px;
-    width: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 8px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    opacity: 0;
-    color: var(--settings-text-normal);
-
-    &:not([aria-disabled="true"]) {
-        &:hover, &:focus-visible {
-            background: var(--color-black-at-9);
-            opacity: 1;
-        }
-    }
-
-    &:active {
-        background: var(--color-black-at-12);
-    }
-
-    [data-theme="dark"] & {
-        &:hover {
-            background: var(--color-white-at-9);
-        }
-        &:active {
-            background: var(--color-white-at-12);
-        }
-    }
-
-    .item:hover & {
-        opacity: 1;
-    }
-
-    .link:focus-visible + & {
-        opacity: 1;
-    }
-
-    svg path {
-        fill-opacity: 0.6;
-    }
-}
-
 .icon {
     width: 16px;
     height: 16px;
     display: block;
     flex-shrink: 0;
+}
+.label {}
+.status {
+    display: flex;
+    font-size: 10px;
+    align-items: center;
+    gap: 6px;
+    margin-left: auto;
+}
+.statusText {
+}
+.statusCircle {
+    display: block;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: lightgrey;
+    [data-status="on"] & {
+        background: var(--color-green-50);
+    }
 }
