--- a/special-pages/pages/settings/app/custom/PrivacyPro.module.css
+++ b/special-pages/pages/settings/app/custom/PrivacyPro.module.css
@@ -1,4 +1,6 @@
 .signup {
+    padding-top: 12px;
+    padding-bottom: 12px;
     display: grid;
     grid-column-gap: 12px;
     grid-template-columns: max-content auto;
@@ -9,6 +11,11 @@
 .icon {
     grid-area: icon;
     display: block;
+    img {
+        display: block;
+        height: 16px;
+        width: 16px;
+    }
 }
 
 .content {
