--- a/special-pages/shared/styles/variables.css
+++ b/special-pages/shared/styles/variables.css
@@ -79,7 +79,7 @@
 
     --color-black-at-1: rgba(0, 0, 0, 0.01);
     --color-black-at-3: rgba(0, 0, 0, 0.03);
-    --color-black-at-6: rgba(0, 0, 0, 0.06);
+    --color-black-at-6: rgb(241, 241, 241);
     --color-black-at-9: rgba(0, 0, 0, 0.09);
     --color-black-at-12: rgba(0, 0, 0, 0.12);
     --color-black-at-15: rgba(0, 0, 0, 0.15);
