--- a/special-pages/pages/settings/app/components/VirtualizedList.module.css
+++ b/special-pages/pages/settings/app/components/VirtualizedList.module.css
@@ -7,6 +7,8 @@
     display: flex;
     flex-direction: column;
     gap: var(--row-gap);
+    max-width: 550px;
+    padding-bottom: 50px;
 }
 
 .debug {
