--- a/special-pages/shared/components/Button/Button.module.css
+++ b/special-pages/shared/components/Button/Button.module.css
@@ -16,11 +16,14 @@
     opacity: var(--button-opacity);
     padding: 0 var(--sp-3);
 
-    &:active {
-        background: var(--button-bg--active, var(--button-bg));
-        box-shadow: var(--button-shadow--active, var(--button-shadow));
-        color: var(--button-text--active, var(--button-text));
-        opacity: var(--button-opacity--active, var(--button-opacity));
+    &.lg {
+        height: var(--sp-7);
+        border-radius: calc(6 * var(--px-in-rem));
+    }
+
+    &.xl {
+        height: var(--sp-8);
+        border-radius: calc(6 * var(--px-in-rem));
     }
 
     &:disabled {
@@ -28,9 +31,17 @@
         box-shadow: var(--button-shadow--disabled, var(--button-shadow));
         color: var(--button-text--disabled, var(--button-text));
         opacity: var(--button-opacity--disabled, var(--button-opacity));
+
+        &:hover {
+            background: var(--button-bg--disabled, var(--button-bg));
+            box-shadow: var(--button-shadow--disabled, var(--button-shadow));
+            color: var(--button-text--disabled, var(--button-text));
+            opacity: var(--button-opacity--disabled, var(--button-opacity));
+        }
     }
 
-    &:focus {
+    &:focus,
+    &:focus-visible {
         background: var(--button-bg--focus, var(--button-bg));
         box-shadow: var(--button-shadow--focus, var(--button-shadow));
         color: var(--button-text--focus, var(--button-text));
@@ -42,6 +53,13 @@
         box-shadow: var(--button-shadow--hover, var(--button-shadow));
         color: var(--button-text--hover, var(--button-text));
         opacity: var(--button-opacity--hover, var(--button-opacity));
+    }
+
+    &:active {
+        background: var(--button-bg--active, var(--button-bg));
+        box-shadow: var(--button-shadow--active, var(--button-shadow));
+        color: var(--button-text--active, var(--button-text));
+        opacity: var(--button-opacity--active, var(--button-opacity));
     }
 }
 
@@ -67,11 +85,12 @@
     }
 }
 
-/* Backward-compatible styles for use with Release Notes */
+/* Backward-compatible styles for use when no platform info available */
 body:not([data-platform-name]) {
     & .button {
         background-blend-mode: normal, color-burn, normal;
         background: linear-gradient(180deg, rgba(255, 255, 255, 0.12) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.06) 100%), #007aff;
+
         border-radius: var(--sp-2);
         border: 1px solid rgba(40, 145, 255, 0.05);
         box-shadow: 0 0 1px 0 rgba(40, 145, 255, 0.05), 0 1px 1px 0 rgba(40, 145, 255, 0.1);
@@ -93,16 +112,26 @@ body:not([data-platform-name]) {
 
 /* macOs Design System Button Tokens */
 [data-platform-name="macos"] {
-    --macos-control-standard-background-rest: #fff;
+    /* Shared among all variants */
+    --macos-control-focused-shadow: 0 0 0 3px rgba(57, 105, 239, 0.55), 0 0 0 1px rgba(57, 105, 239, 0.55) inset, 0 0 1px 0 rgba(0, 0, 0, 0.05), 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+
+    /* Standard button variant */
+    --macos-control-standard-background-rest: var(--color-white);
     --macos-control-standard-background-rest--dark: rgba(255, 255, 255, 0.28);
     --macos-control-standard-background-pressed: #e7e7e7;
-
-    --macos-control-accent-branded-background-rest: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), #2749db;
-    --macos-control-accent-branded-background-pressed: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), #1743d1;
-
     --macos-control-standard-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2) inset, 0 1px 0 0 rgba(255, 255, 255, 0.05) inset, 0 0 0 1px rgba(0, 0, 0, 0.1), 0 0 1px 0 rgba(0, 0, 0, 0.05), 0 1px 1px 0 rgba(0, 0, 0, 0.2);
-    --macos-control-accent-shadow: 0 1px 0 0 rgba(255, 255, 255, 0) inset, 0 1px 0 0 rgba(255, 255, 255, 0) inset, 0 0 0 1px rgba(0, 122, 255, 0.05), 0 0 1px 0 rgba(0, 122, 255, 0.05), 0 1px 1px 0 rgba(0, 122, 255, 0.1);
-    --macos-control-focused-shadow: 0 0 0 3px rgba(57, 105, 239, 0.55), 0 0 0 1px rgba(57, 105, 239, 0.55) inset, 0 0 1px 0 rgba(0, 0, 0, 0.05), 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+
+    /* Accent Branded variant */
+    --macos-control-accent-branded-background-rest: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), #2749DB;
+    --macos-control-accent-branded-background-pressed: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), #2140C0;
+    --macos-control-accent-branded-background-hover: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), #2749DB;
+    --macos-control-accent-branded-background-disabled: var(--color-white);
+    --macos-control-accent-branded-background-focus: linear-gradient(0deg, rgba(255, 255, 255, 0.00) 0%, rgba(255, 255, 255, 0.16) 100%), #2749DB;
+
+    --macos-control-accent-branded-shadow-rest: 0 1px 0 0 rgba(255, 255, 255, 0) inset, 0 1px 0 0 rgba(255, 255, 255, 0) inset, 0 0 0 1px rgba(0, 122, 255, 0.05), 0 0 1px 0 rgba(0, 122, 255, 0.05), 0 1px 1px 0 rgba(0, 122, 255, 0.1);
+    --macos-control-accent-branded-shadow-pressed: 0px 0.5px 0px 0px rgba(255, 255, 255, 0.00) inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.00) inset, 0px 0px 0px 0.5px rgba(0, 122, 255, 0.05), 0px 0px 1px 0px rgba(0, 122, 255, 0.05), 0px 1px 1px 0px rgba(0, 122, 255, 0.10);
+    --macos-control-accent-branded-shadow-hover: 0px 0.5px 0px 0px rgba(255, 255, 255, 0.00) inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.00) inset, 0px 0px 0px 0.5px rgba(0, 122, 255, 0.05), 0px 0px 1px 0px rgba(0, 122, 255, 0.05), 0px 1px 1px 0px rgba(0, 122, 255, 0.10);
+    --macos-control-accent-branded-shadow-disabled: 0px 0.5px 0px 0px rgba(255, 255, 255, 0.20) inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.05) inset, 0px 0px 0px 0.5px rgba(0, 0, 0, 0.10), 0px 0px 1px 0px rgba(0, 0, 0, 0.05), 0px 1px 1px 0px rgba(0, 0, 0, 0.20);
 }
 
 /* macOS Variables */
@@ -133,11 +162,13 @@ body:not([data-platform-name]) {
     &.accentBrand {
         --button-bg: var(--macos-control-accent-branded-background-rest);
         --button-text: var(--color-white);
-        --button-shadow: var(--macos-control-accent-shadow);
+        --button-shadow: var(--macos-control-accent-branded-shadow-rest);
         --button-opacity: 1;
 
         /* Active */
         --button-bg--active: var(--macos-control-accent-branded-background-pressed);
+        --button-text--active: var(--color-white-at-80);
+        --button-shadow--active: var(--macos-control-accent-branded-shadow-pressed);
 
         /* Disabled */
         --button-bg--disabled: var(--macos-control-standard-background-rest);
@@ -146,10 +177,14 @@ body:not([data-platform-name]) {
         --button-opacity--disabled: 0.4;
 
         /* Focus */
+        --button-bg--focus: var(--macos-control-accent-branded-background-focus);
+        --button-text--focus: var(--color-white);
         --button-shadow--focus: var(--macos-control-focused-shadow);
 
         /* Hover */
-        /* TODO: No difference on hover according to Figma(?) */
+        --button-bg--hover: var(--macos-control-accent-branded-background-hover);
+        --button-text--hover: var(--color-white);
+        --button-shadow--hover: var(--macos-control-accent-branded-shadow-hover);
     }
 
     [data-theme=dark] & {
