Bigger icon; Hide switch bar

--- a/special-pages/pages/duckplayer/app/components/SwitchBarMobile.module.css
+++ b/special-pages/pages/duckplayer/app/components/SwitchBarMobile.module.css
@@ -51,3 +51,10 @@
         bottom: 0;
     }
 }
+
+/* Different layout for YouTube Errors on mobile */
+[data-youtube-error="true"] {
+    & .switchBar {
+        display: none;
+    }
+}
