--- a/special-pages/pages/duckplayer/app/components/InfoBar.module.css
+++ b/special-pages/pages/duckplayer/app/components/InfoBar.module.css
@@ -80,3 +80,10 @@
     display: flex;
     gap: 8px;
 }
+
+/* Different layout for YouTube Errors on desktop */
+[data-youtube-error="true"] {
+    & .switch {
+        display: none;
+    }
+}
