--- a/special-pages/pages/duckplayer/app/components/MobileApp.module.css
+++ b/special-pages/pages/duckplayer/app/components/MobileApp.module.css
@@ -262,22 +262,17 @@ body:has([data-state="completed"] [aria-checked="true"]) .switch {
             padding: 4px;
         }
 
-        & .switch {
-            background: #2f2f2f;
-            padding: 8px 8px 0 8px;
-            height: 60px;
-            max-height: 60px;
-            border-top-left-radius: var(--outer-radius);
-            border-top-right-radius: var(--outer-radius);
-
-            transition: all 0.3s;
-        }
-
         & .buttons {
             background: #2f2f2f;
             padding: 8px;
 
+            border-top-left-radius: var(--outer-radius);
+            border-top-right-radius: var(--outer-radius);
             transition: all 0.3s;
+        }
+
+        & .switch {
+            display: none;
         }
 
         &:has([data-state="completed"]) {
