--- a/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
+++ b/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
@@ -186,6 +186,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 0 1px;
+        margin: 0 -1px;
 
         h2 {
             color: var(--ntp-text-on-primary);
