--- a/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
+++ b/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
@@ -1,10 +1,10 @@
 .error {
-    --background-color: #141414;
-    --text-color: #fff;
-    --text-color-secondary: #ccc;
+    --youtube-error-background-color: #141414;
+    --youtube-error-text-color: #fff;
+    --youtube-error-text-color-secondary: #ccc;
 
     align-items: center;
-    background: var(--background-color);
+    background: var(--youtube-error-background-color);
     display: grid;
     height: 100%;
     justify-items: center;
@@ -102,7 +102,7 @@
 }
 
 .heading {
-    color: var(--text-color);
+    color: var(--youtube-error-text-color);
     font-size: 20px;
     font-weight: 700;
     line-height: calc(24 / 20);
@@ -110,7 +110,7 @@
 }
 
 .messages {
-    color: #ccc;
+    color: var(--youtube-error-text-color-secondary);
     font-size: 16px;
     line-height: calc(24 / 16);
 }
