Duck Player custom error copy update (#1706)

--- a/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
+++ b/special-pages/pages/duckplayer/app/components/YouTubeError.module.css
@@ -1,6 +1,10 @@
 .error {
+    --youtube-error-background-color: #141414;
+    --youtube-error-text-color: #fff;
+    --youtube-error-text-color-secondary: #ccc;
+
     align-items: center;
-    background: rgba(0, 0, 0, 0.6);
+    background: var(--youtube-error-background-color);
     display: grid;
     height: 100%;
     justify-items: center;
@@ -78,8 +82,8 @@
         content: ' ';
         display: block;
         background: url('../img/warning-96.data.svg') no-repeat;
-        height: 48px;
-        width: 48px;
+        height: 96px;
+        width: 96px;
     }
 
     @media screen and (max-width: 320px) {
@@ -98,7 +102,7 @@
 }
 
 .heading {
-    color: #fff;
+    color: var(--youtube-error-text-color);
     font-size: 20px;
     font-weight: 700;
     line-height: calc(24 / 20);
@@ -106,7 +110,7 @@
 }
 
 .messages {
-    color: #ccc;
+    color: var(--youtube-error-text-color-secondary);
     font-size: 16px;
     line-height: calc(24 / 16);
 }
@@ -132,3 +136,12 @@ ul.messages {
     }
 }
 
+.buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.buttons .spacer {
+    flex: 0 0 16px;
+}
