--- a/special-pages/pages/new-tab/app/styles/ntp-theme.css
+++ b/special-pages/pages/new-tab/app/styles/ntp-theme.css
@@ -35,13 +35,21 @@
     --border-radius-xs: 4px;
     --focus-ring: 0px 0px 0px 1px var(--color-white), 0px 0px 0px 3px var(--ntp-focus-outline-color);
     --focus-ring-thin: 0px 0px 0px 1px var(--ntp-focus-outline-color), 0px 0px 0px 1px  var(--color-white);
+
+    --duckai-purple: rgba(107, 78, 186, 1);
 }
 
 body {
     --default-light-background-color: var(--color-gray-0);
     --default-dark-background-color: var(--color-gray-85);
+    --default-ntp-tube-width: 504;
+    --default-favorites-count: 6;
 }
 
+body:has([data-entry-point="search"]) {
+    --default-ntp-tube-width: 680;
+    --default-favorites-count: 8;
+}
 
 [data-theme=light] {
     --ntp-surface-background-color: var(--color-white-at-30);
