all sorts of hacks

--- a/special-pages/pages/new-tab/app/search/components/Search.module.css
+++ b/special-pages/pages/new-tab/app/search/components/Search.module.css
@@ -68,3 +68,10 @@
 .list:not(:empty) {
     padding: 8px;
 }
+.item {
+    display: block;
+    text-decoration: none;
+    &[data-selected="true"] {
+        background: var(--color-black-at-6);
+    }
+}
