--- a/special-pages/pages/new-tab/app/protections/components/Protections.module.css
+++ b/special-pages/pages/new-tab/app/protections/components/Protections.module.css
@@ -2,6 +2,7 @@
     background: var(--ntp-surface-background-color);
     backdrop-filter: blur(48px);
     border: 1px solid var(--ntp-surface-border-color);
+    box-shadow: var(--ntp-surface-shadow);
     padding: var(--sp-6);
     border-radius: var(--border-radius-lg);
     display: grid;
