--- a/special-pages/pages/new-tab/app/styles/ntp-theme.css
+++ b/special-pages/pages/new-tab/app/styles/ntp-theme.css
@@ -3,6 +3,7 @@
     --ntp-drawer-width: calc(224 * var(--px-in-rem));
     --ntp-drawer-scroll-width: 12px;
     --ntp-combined-width: calc(var(--ntp-drawer-width) + var(--ntp-drawer-scroll-width));
+    --ntp-surface-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.13);
 
     /* Mac/System/Callout */
     --callout-font-size: 12px;
