--- a/special-pages/pages/new-tab/app/search/components/Search.module.css
+++ b/special-pages/pages/new-tab/app/search/components/Search.module.css
@@ -98,6 +98,12 @@
     cursor: pointer;
     gap: 8px;
 
+    svg {
+        width: 16px;
+        height: 16px;
+        display: block;
+    }
+
     svg path {
         fill-opacity: 1!important;
     }
