--- a/special-pages/pages/new-tab/app/search/components/SearchInput.module.css
+++ b/special-pages/pages/new-tab/app/search/components/SearchInput.module.css
@@ -106,7 +106,14 @@
     color: #fff;
     position: relative;
     top: 4px;
+    &:hover {
+        background-color: var(--duckai-purple-hover);
+    }
+    &:active {
+        background-color: var(--duckai-purple-active);
+    }
 }
+
 
 .buttonSecondary {
     background-color: rgba(0, 0, 0, 0.06);
