--- a/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
+++ b/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
@@ -1,5 +1,3 @@
-.heading {}
-
 .control {
     display: flex;
     align-items: center;
@@ -17,6 +15,11 @@
     align-items: center;
     justify-content: center;
     padding-top: 0.5px;
+
+    img {
+        max-width: 1rem;
+        max-height: 1rem;
+    }
 }
 
 .caption {
@@ -162,7 +165,4 @@
     [data-theme=dark] & {
         background: var(--color-white-at-9);
     }
-}
-
-.listExpander {
 }
