--- a/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
@@ -1,7 +1,11 @@
-.form.hasSuggestions {
-    background: var(--ntp-surfaces-panel-background-color);
-    border-radius: 16px;
-    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.08), 0px 4px 8px 0px rgba(0, 0, 0, 0.16);
+.form {
+    align-self: stretch;
+
+    &.hasSuggestions {
+        background: var(--ntp-surfaces-panel-background-color);
+        border-radius: 16px;
+        box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.08), 0px 4px 8px 0px rgba(0, 0, 0, 0.16);
+    }
 }
 
 .container {
