--- a/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
@@ -1,5 +1,6 @@
 .form {
     align-self: stretch;
+    margin: 0 calc(-1 * var(--sp-1));
 
     &.hasSuggestions {
         background: var(--ntp-surfaces-panel-background-color);
@@ -15,7 +16,7 @@
 
     .form:not(.hasSuggestions) & {
         background: var(--ntp-surfaces-panel-background-color);
-        border-radius: var(--border-radius-lg);
+        border-radius: 11px;
         box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1), 0px 4px 8px 0px rgba(0, 0, 0, 0.08);
 
         &:has(.input:focus) {
