--- a/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
@@ -1,29 +1,7 @@
-.form {
-    align-self: stretch;
-    margin: 0 calc(-1 * var(--sp-1));
-
-    &.hasSuggestions {
-        background: var(--ntp-surface-tertiary);
-        border-radius: 16px;
-        box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.08), 0px 4px 8px 0px rgba(0, 0, 0, 0.16);
-    }
-}
-
-.container {
+.inputContainer {
     align-items: center;
     display: flex;
     padding: var(--sp-1);
-
-    .form:not(.hasSuggestions) & {
-        background: var(--ntp-surface-tertiary);
-        border-radius: 11px;
-        box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1), 0px 4px 8px 0px rgba(0, 0, 0, 0.08);
-
-        &:has(.input:focus) {
-            border-radius: 14px;
-            box-shadow: 0 0 0 2px var(--ntp-color-primary), 0 0 0 4px rgba(57, 105, 239, 0.2);
-        }
-    }
 
     svg {
         height: var(--sp-4);
