Add useBlurWorkaround hook to fix Safari blur issue on input

--- a/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
@@ -11,6 +11,7 @@
 }
 
 .input {
+    --focus-state: 0; /* see useBlurWorkaround.js */
     background: none;
     border: none;
     color: var(--ntp-text-normal);
@@ -19,6 +20,7 @@
     padding: 0;
 
     &:focus {
+        --focus-state: 1; /* see useBlurWorkaround.js */
         outline: none;
     }
 }
