--- a/special-pages/pages/new-tab/app/omnibar/components/TabSwitcher.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/TabSwitcher.module.css
@@ -17,7 +17,6 @@
     gap: 6px;
     height: var(--sp-8);
     justify-content: center;
-    padding: 0 var(--sp-4);
     padding: 0;
     width: 92px;
     z-index: 1;
@@ -38,6 +37,7 @@
     position: absolute;
     top: 0;
     transition: translate 200ms ease;
+    will-change: translate;
 
     @media (prefers-reduced-motion: reduce) {
         transition: none;
